--- a/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
+++ b/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
@@ -90,7 +90,7 @@
           ]
         }
       ],
-      "upDesc" : "王后：陛下已高烧三天了，病还没有起色吗？\\n\n女仆：情况还在恶化，恐怕撑不过今夜了。",
+      "upDesc" : "王后：陛下已高烧三天了，病还没有起色吗？\n女仆：情况还在恶化，恐怕撑不过今夜了。",
       "downDesc" : "我们的药水能拯救人类，并让他理解猫的语言"
     },
     {
@@ -183,7 +183,7 @@
           ]
         }
       ],
-      "upDesc" : "葛林：猫、猫说话了！这将死之人的幻觉吗？\\n\n西蒙：是猫咪拯救了你，陛下。",
+      "upDesc" : "国王：猫、猫说话了！这将死之人的幻觉吗？\n西蒙：是猫咪拯救了你，陛下。",
       "downDesc" : "与国王交涉，达成对我们有利的提案"
     },
     {
@@ -276,7 +276,7 @@
           ]
         }
       ],
-      "upDesc" : "葛林：那只黑猫在骗我吗，安彼西奥要谋反？\\n\n葛林：我得想办法离开这里。",
+      "upDesc" : "国王：那只黑猫在骗我吗，亲王要谋反？\n国王：我得想办法离开这里。",
       "downDesc" : "国王试图只身逃离"
     },
     {
@@ -369,7 +369,7 @@
           ]
         }
       ],
-      "upDesc" : "葛林：宫中四处都是叛贼的耳目，小心行事。 \\n\n女仆：我一定会将这封信交给佩尔主教。",
+      "upDesc" : "国王：宫中四处都是叛贼的耳目，小心行事。 \n女仆：我一定会将这封信交给佩尔主教。",
       "downDesc" : "猫咪的行动会导致隐匿度下降"
     },
     {
@@ -462,7 +462,7 @@
           ]
         }
       ],
-      "upDesc" : "女仆：如果不是你，我也不会沦落至此。\\n\n佩尔：我是亏欠于你，但私情不能打破原则。",
+      "upDesc" : "女仆：如果不是你，我也不会沦落至此。\n主教：我是亏欠于你，但私情不能打破原则。",
       "downDesc" : "女仆尝试说服主教，帮助国王"
     },
     {
@@ -556,7 +556,7 @@
           ]
         }
       ],
-      "upDesc" : "葛林：有人要谋害于我，身边却没有可依靠的人。最信任的仆从因我而死，我该怎么办？",
+      "upDesc" : "国王：有人要谋害于我，身边却没有可依靠的人。最信任的仆从因我而死，我该怎么办？",
       "downDesc" : "国王有几分动摇"
     },
     {
@@ -650,7 +650,7 @@
           ]
         }
       ],
-      "upDesc" : "葛林：有人要谋害于我，我却做不了什么。主教不肯伸出援手，我该怎么对抗叛贼的部队？",
+      "upDesc" : "国王：有人要谋害于我，我却做不了什么。主教不肯伸出援手，我该怎么对抗叛贼的部队？",
       "downDesc" : "国王有几分动摇"
     },
     {
@@ -743,7 +743,7 @@
           ]
         }
       ],
-      "upDesc" : "葛林：我已走投无路，只好求助于你。\\n\n西蒙：那接下来，让我们谈谈契约的细则吧。",
+      "upDesc" : "国王：我已走投无路，只好求助于你。\n西蒙：那接下来，让我们谈谈契约的细则吧。",
       "downDesc" : "为组织挣得好名声时，可获得影响力"
     },
     {
@@ -1118,7 +1118,7 @@
         }
       ],
       "upDesc" : "火刑场遗迹是当年女巫审判的发生地，许多猫咪在这里被烧死。圣杯应该藏在遗迹的某处。",
-      "downDesc" : "前往火刑场遗迹寻找圣杯"
+      "downDesc" : "分析圣杯线索中潜藏的信息"
     },
     {
       "eventId" : "10104",
@@ -1400,7 +1400,7 @@
           ]
         }
       ],
-      "upDesc" : "茵菲尔：我下了好几次毒，但都被察觉了。\\n\n安彼西奥：等军队到了，他也就跑不了了。",
+      "upDesc" : "茵菲尔：我下了好几次毒，但都被察觉了。\n亲王：等军队到了，他也就跑不了了。",
       "downDesc" : "监听王后与亲王的对话"
     },
     {
@@ -1493,7 +1493,7 @@
           ]
         }
       ],
-      "upDesc" : "葛林：不可能。我跟茵菲尔从小就认识，这么多年我不会不了解她。她不可能背叛我。",
+      "upDesc" : "国王：不可能。我跟茵菲尔从小就认识，这么多年我不会不了解她。她不可能背叛我。",
       "downDesc" : "带领国王寻找王后背叛的证据"
     },
     {
@@ -1586,8 +1586,8 @@
           ]
         }
       ],
-      "upDesc" : "茵菲尔：我不曾背叛过您，葛林陛下。\\n\n葛林：我也想相信你，我也希望不是这样。",
-      "downDesc" : "葛林的家事，交给他自己处理吧"
+      "upDesc" : "茵菲尔：我不曾背叛过您，国王陛下。\n国王：我也想相信你，我也希望不是这样。",
+      "downDesc" : "国王的家事，交给他自己处理吧"
     },
     {
       "eventId" : "10203",
@@ -1679,7 +1679,7 @@
           ]
         }
       ],
-      "upDesc" : "葛林：没想到最后能陪在我身边的只有你。\\n\n西蒙：安心吧陛下，猫咪会为你解决一切的。",
+      "upDesc" : "国王：没想到最后能陪在我身边的只有你。\n西蒙：安心吧陛下，猫咪会为你解决一切的。",
       "downDesc" : "国王的精神十分脆弱，我们可以乘虚而入"
     },
     {
@@ -2240,7 +2240,7 @@
         }
       ],
       "upDesc" : "控制国王，意味着对一个地区政权的高度控制。自此，猫咪开始了颠覆人类的第一步。",
-      "downDesc" : "洗脑葛林，取得该区域的统治胜利"
+      "downDesc" : "洗脑国王，取得该区域的统治胜利"
     },
     {
       "eventId" : "11010",
@@ -2429,7 +2429,7 @@
           ]
         }
       ],
-      "upDesc" : "对国王的暗杀活动没有停止。有嘉帕兹在，我们可以更快找出威胁。但注意不要被她发现。",
+      "upDesc" : "对国王的暗杀活动没有停止。有女仆在，我们可以更快找出威胁。但注意不要被她发现。",
       "downDesc" : "不制止暗杀将导致失败"
     },
     {
@@ -2619,7 +2619,7 @@
           ]
         }
       ],
-      "upDesc" : "对国王的暗杀活动没有停止。有嘉帕兹在，我们可以更快找出威胁。但注意不要被她发现。",
+      "upDesc" : "对国王的暗杀活动没有停止。有女仆在，我们可以更快找出威胁。但注意不要被她发现。",
       "downDesc" : "不制止暗杀将导致失败"
     },
     {
@@ -2809,7 +2809,7 @@
           ]
         }
       ],
-      "upDesc" : "对国王的暗杀活动没有停止。有嘉帕兹在，我们可以更快找出威胁。但注意不要被她发现。",
+      "upDesc" : "对国王的暗杀活动没有停止。有女仆在，我们可以更快找出威胁。但注意不要被她发现。",
       "downDesc" : "不制止暗杀将导致失败"
     },
     {
@@ -4119,7 +4119,7 @@
           ]
         }
       ],
-      "upDesc" : "尼奥塔德：兵器在秘密运送，没有被人盘查。\\n\n安彼西奥：很好。低调行事，不要引人耳目。",
+      "upDesc" : "侯爵：兵器在秘密运送，没有被人盘查。\n亲王：很好。低调行事，不要引人耳目。",
       "downDesc" : "派遣猫咪入住，监听情报，伺机破坏路线"
     },
     {
@@ -4215,7 +4215,7 @@
           ]
         }
       ],
-      "upDesc" : "尼奥塔德：军队将在数日后抵达王都。\\n\n安彼西奥：我的傻侄子还蒙在鼓里吧。",
+      "upDesc" : "侯爵：军队将在数日后抵达王都。\n亲王：我的傻侄子还蒙在鼓里吧。",
       "downDesc" : "消耗50点影响力，请求外地猫咪协助行动"
     },
     {
@@ -4308,7 +4308,7 @@
           ]
         }
       ],
-      "upDesc" : "尼奥塔德：这次宴会，各地的侯爵都会到场。\\n\n安彼西奥：说服他们不干涉我们的计划就行。",
+      "upDesc" : "侯爵：这次宴会，各地的侯爵都会到场。\n亲王：说服他们不干涉我们的计划就行。",
       "downDesc" : "控制厨师，以制造”火灾意外“来破坏信任"
     },
     {
@@ -4401,7 +4401,7 @@
           ]
         }
       ],
-      "upDesc" : "安彼西奥：佩尔主教回复了吗？\\n\n尼奥塔德：他很顽固。拉拢他还需要点时间。",
+      "upDesc" : "亲王：佩尔主教回复了吗？\n侯爵：他很顽固。拉拢他还需要点时间。",
       "downDesc" : "控制主教，以消解宗教支持"
     },
     {
@@ -4494,7 +4494,7 @@
           ]
         }
       ],
-      "upDesc" : "安彼西奥：这浓烟到底是怎么回事？\\n\n瓦林提亚：厨房起火了，马上就要烧到这了！",
+      "upDesc" : "亲王：这浓烟到底是怎么回事？\n侍从：厨房起火了，马上就要烧到这了！",
       "downDesc" : "冒进的行动，将损失5点隐匿度"
     },
     {
@@ -4588,8 +4588,8 @@
           ]
         }
       ],
-      "upDesc" : "安彼西奥：佩尔主教回复了吗？\\n\n尼奥塔德：他很顽固。拉拢他还需要点时间。",
-      "downDesc" : "佩尔对嘉帕兹作有过承诺"
+      "upDesc" : "亲王：佩尔主教回复了吗？\n侯爵：他很顽固。拉拢他还需要点时间。",
+      "downDesc" : "主教对女仆作有过承诺"
     },
     {
       "eventId" : "11300",
@@ -5251,7 +5251,7 @@
           ]
         }
       ],
-      "upDesc" : "西蒙：原来嘉帕兹和佩尔是这样的关系。有利用的价值，来模仿她的笔记写一封信吧，",
+      "upDesc" : "西蒙：原来女仆和主教是这样的关系。有利用的价值，来模仿她的笔记写一封信吧，",
       "downDesc" : "如果主教动摇了，我们便有机会控制他"
     },
     {
@@ -5344,7 +5344,7 @@
           ]
         }
       ],
-      "upDesc" : "佩尔：嘉帕兹竟然主动联系我了。五年，我终于等到这一天了。里面到底写了什么？",
+      "upDesc" : "主教：嘉帕兹竟然主动联系我了。五年，我终于等到这一天了。里面到底写了什么？",
       "downDesc" : "将伪造的信件送给主教"
     },
     {
@@ -5443,7 +5443,7 @@
           ]
         }
       ],
-      "upDesc" : "佩尔：“愿主怜悯你，让你前往极乐的天国。你所承受的一切苦难，都会得到主的回报……“",
+      "upDesc" : "主教：“愿主怜悯你，让你前往极乐的天国。你所承受的一切苦难，都会得到主的回报……“",
       "downDesc" : "举办葬礼时，主教会离开家中"
     },
     {
@@ -5538,7 +5538,7 @@
           ]
         }
       ],
-      "upDesc" : "佩尔：又是小偷又是葬礼，现在我的心十分动摇。让我祷告一下吧，神职者需要保持宁静。",
+      "upDesc" : "主教：又是小偷又是葬礼，现在我的心十分动摇。让我祷告一下吧，神职者需要保持宁静。",
       "downDesc" : "主教从家里返回，也没有失窃，于是内心充满了宁静。"
     },
     {
@@ -5632,7 +5632,7 @@
           ]
         }
       ],
-      "upDesc" : "佩尔：密函、教衣、权杖，一切都丢了。这是神对我当年舍弃你的惩罚吗？",
+      "upDesc" : "主教：密函、教衣、权杖，一切都丢了。这是神对我当年舍弃你的惩罚吗？",
       "downDesc" : "观察主教家中失窃后的反应"
     },
     {
@@ -5726,7 +5726,7 @@
           ]
         }
       ],
-      "upDesc" : "佩尔：你的灵魂没办法升上天国吗，我的女儿？我能为你做什么吗，什么都可以！",
+      "upDesc" : "主教：你的灵魂没办法升上天国吗，我的女儿？我能为你做什么吗，什么都可以！",
       "downDesc" : "我们可以再吓唬他一下"
     },
     {
@@ -5915,7 +5915,7 @@
           ]
         }
       ],
-      "upDesc" : "佩尔：最近常有一种被猫盯着的感觉。我似乎从它们身上感受到了神性。",
+      "upDesc" : "主教：最近常有一种被猫盯着的感觉。我似乎从它们身上感受到了神性。",
       "downDesc" : "主教注意到了我们。这是危机，也是机会"
     },
     {
@@ -6009,7 +6009,7 @@
           ]
         }
       ],
-      "upDesc" : "佩尔：这些猫行动的背后，可能存在某种规律。这需要记录归纳一下，才能得出结论。",
+      "upDesc" : "主教：这些猫行动的背后，可能存在某种规律。这需要记录归纳一下，才能得出结论。",
       "downDesc" : "我们需要适当的“表演”一下"
     },
     {
@@ -6103,7 +6103,7 @@
           ]
         }
       ],
-      "upDesc" : "佩尔：一些古老的文献上有着相关的记载，或许我可以从旧的典籍上找到一些线索。",
+      "upDesc" : "主教：一些古老的文献上有着相关的记载，或许我可以从旧的典籍上找到一些线索。",
       "downDesc" : "我们可以篡改典籍，诱导主教的研究方向"
     },
     {
@@ -6196,7 +6196,7 @@
           ]
         }
       ],
-      "upDesc" : "佩尔：猫曾是神的使徒。近些年对猫的迫害，引发不祥的征兆。必须向教廷禀告此事。",
+      "upDesc" : "主教：猫曾是神的使徒。近些年对猫的迫害，引发不祥的征兆。必须向教廷禀告此事。",
       "downDesc" : "需要获得神启的猫咪参与"
     },
     {
@@ -7425,7 +7425,7 @@
           ]
         }
       ],
-      "upDesc" : "门提尔：今天讲介质与触媒。你在打瞌睡吗？\\n.\n费琳娜：不，我醒着呢，老师。",
+      "upDesc" : "炼金术士：今天讲介质与触媒。你在打瞌睡吗？.\n医生：不，我醒着呢，老师。",
       "downDesc" : "门提尔在传授炼金术的知识"
     },
     {
@@ -7519,7 +7519,7 @@
           ]
         }
       ],
-      "upDesc" : "门提尔：再给我一点时间，马上就有突破了。\\n\n茵菲尔：让我先看看成果，再考虑资助的事。",
+      "upDesc" : "炼金术士：再给我一点时间，马上就有突破了。\n茵菲尔：让我先看看成果，再考虑资助的事。",
       "downDesc" : "给皇后表演炼金术的进展"
     },
     {
@@ -7614,7 +7614,7 @@
           ]
         }
       ],
-      "upDesc" : "门提尔：材料又用完了，可是没钱买新的啊。看看能不能找些纯度高的替代品……",
+      "upDesc" : "炼金术士：材料又用完了，可是没钱买新的啊。看看能不能找些纯度高的替代品……",
       "downDesc" : "我们可以拿一些研究的副产物换钱"
     },
     {
@@ -7708,7 +7708,7 @@
           ]
         }
       ],
-      "upDesc" : "门提尔：三份贤者之石，两份铅……嗯，材料用完了，再去买点吧。",
+      "upDesc" : "炼金术士：三份贤者之石，两份铅……嗯，材料用完了，再去买点吧。",
       "downDesc" : "我们可以拿一些研究的副产物换钱"
     },
     {
@@ -8085,7 +8085,7 @@
         }
       ],
       "upDesc" : "科恩：我们曾用苹果，推动过人类物理学的发展。现在，让我们用苹果再推动一次进步吧，",
-      "downDesc" : "获得神启的猫咪，可以推动门提尔的研究"
+      "downDesc" : "获得神启的猫咪，可以推动炼金术士的研究"
     },
     {
       "eventId" : "11518",
@@ -8177,7 +8177,7 @@
           ]
         }
       ],
-      "upDesc" : "西蒙：这里有如此多的金子。就算少了一些，门提尔也不会知道。",
+      "upDesc" : "西蒙：这里有如此多的金子。就算少了一些，炼金术士也不会知道。",
       "downDesc" : "获得一些人类货币"
     },
     {
@@ -8838,7 +8838,7 @@
           ]
         }
       ],
-      "upDesc" : "班诺：因西亚的骑士，怎么会输给一个侍卫？ \\n\n班诺：臭猫，是不是你给我下了什么咒？",
+      "upDesc" : "骑士：因西亚的骑士，怎么会输给一个侍卫？ \n骑士：臭猫，是不是你给我下了什么咒？",
       "downDesc" : "有猫咪在遭受虐待"
     },
     {
@@ -8932,8 +8932,8 @@
           ]
         }
       ],
-      "upDesc" : "班诺：懦夫，你敢与我再比试一次吗？\\n\n瓦林提亚：你天天烦我，难道就没正事做吗？",
-      "downDesc" : "班诺不断地向瓦林提亚发起挑衅"
+      "upDesc" : "骑士：懦夫，你敢与我再比试一次吗？\n侍从：你天天烦我，难道就没正事做吗？",
+      "downDesc" : "骑士不断地向侍从发起挑衅"
     },
     {
       "eventId" : "11612",
@@ -9026,8 +9026,8 @@
           ]
         }
       ],
-      "upDesc" : "班诺：你是怕又输给我，所以才会拒绝我吧？\\n\n瓦林提亚：我受够你了，今天就做个了断吧。",
-      "downDesc" : "班诺与瓦林提亚开始决斗"
+      "upDesc" : "骑士：你是怕又输给我，所以才会拒绝我吧？\n侍从：我受够你了，今天就做个了断吧。",
+      "downDesc" : "骑士与侍从开始决斗"
     },
     {
       "eventId" : "11613",
@@ -9782,7 +9782,7 @@
           ]
         }
       ],
-      "upDesc" : "瓦林提亚：有什么吩咐吗，殿下？\\n\n安彼西奥：去帮我送一封信。",
+      "upDesc" : "侍从：有什么吩咐吗，殿下？\n亲王：去帮我送一封信。",
       "downDesc" : "猫咪不会放过任何的机密"
     },
     {
@@ -9875,8 +9875,8 @@
           ]
         }
       ],
-      "upDesc" : "依斯皮柯：瓦林提亚，他以前的那些风流韵事我可很清楚。得让他我妹妹远一点。",
-      "downDesc" : "他一直怀疑瓦林提亚的人品"
+      "upDesc" : "厨师：瓦林提亚，他以前的那些风流韵事我可很清楚。得让他我妹妹远一点。",
+      "downDesc" : "他一直怀疑侍从的人品"
     },
     {
       "eventId" : "11712",
@@ -9968,7 +9968,7 @@
           ]
         }
       ],
-      "upDesc" : "费琳娜：你最近工作好像很忙。\\n\n瓦林提亚：再忙我也会抽出时间陪你的。",
+      "upDesc" : "医生：你最近工作好像很忙。\n侍从：再忙我也会抽出时间陪你的。",
       "downDesc" : "猫咪们也可以来凑凑热闹"
     },
     {
@@ -10068,8 +10068,8 @@
           ]
         }
       ],
-      "upDesc" : "女人：塞达呢，今天怎么不是他来？\\n\n瓦林提亚：他最近失踪了，殿下要我来送信。",
-      "downDesc" : "塞达，一个值得关注的名字"
+      "upDesc" : "女人：那个乞丐呢，今天怎么不是他来？\n侍从：他最近失踪了，殿下要我来送信。",
+      "downDesc" : "亲王与乞丐有关系"
     },
     {
       "eventId" : "11714",
@@ -10161,8 +10161,8 @@
           ]
         }
       ],
-      "upDesc" : "依斯皮柯：看见了吧，他在跟别的女人幽会。\\n\n费琳娜：不可能！你在做什么，瓦林提亚！",
-      "downDesc" : "费琳娜突然冲了出来"
+      "upDesc" : "厨师：看见了吧，他在跟别的女人幽会。\n医生：不可能！你在做什么，瓦林提亚！",
+      "downDesc" : "医生突然冲了出来"
     },
     {
       "eventId" : "11715",
@@ -10254,7 +10254,7 @@
           ]
         }
       ],
-      "upDesc" : "瓦林提亚：你不相信我吗，费琳娜？\\n\n费琳娜：我也想相信你，只要你能解释一下。",
+      "upDesc" : "侍从：你不相信我吗，医生？\n医生：我也想相信你，只要你能解释一下。",
       "downDesc" : "他会选择事业，还是爱情？"
     },
     {
@@ -11012,7 +11012,7 @@
           ]
         }
       ],
-      "upDesc" : "费琳娜家中有许多圣草。不过我们需要准备点钱去交换，避免药品失窃的事显得过于招摇。",
+      "upDesc" : "医生家中有许多圣草。不过我们需要准备点钱去交换，避免药品失窃的事显得过于招摇。",
       "downDesc" : "花费20人类货币，让猫咪入神"
     },
     {
@@ -11673,8 +11673,8 @@
           ]
         }
       ],
-      "upDesc" : "依斯皮柯：最近厨房里怎么这么多老鼠。是那群邋遢的水手从外地带回来的吗？",
-      "downDesc" : "依斯皮柯正为鼠患而头疼"
+      "upDesc" : "厨师：最近厨房里怎么这么多老鼠。是那群邋遢的水手从外地带回来的吗？",
+      "downDesc" : "厨师正为鼠患而头疼"
     },
     {
       "eventId" : "11911",
@@ -11767,7 +11767,7 @@
           ]
         }
       ],
-      "upDesc" : "依斯皮柯：这每一颗药都像金子一样昂贵。要是没用，我就去揍死那个卖药的小子。",
+      "upDesc" : "厨师：这每一颗药都像金子一样昂贵。要是没用，我就去揍死那个卖药的小子。",
       "downDesc" : "捕鼠药会有用么"
     },
     {
@@ -11861,7 +11861,7 @@
           ]
         }
       ],
-      "upDesc" : "依斯皮柯：猫出现在祷告台上，这是某种预兆。或许可以试试找几只猫。",
+      "upDesc" : "厨师：猫出现在祷告台上，这是某种预兆。或许可以试试找几只猫。",
       "downDesc" : "猫咪可以帮助他，也可以不帮助他"
     },
     {
@@ -12047,7 +12047,7 @@
           ]
         }
       ],
-      "upDesc" : "尼奥塔德：噢！噢！怎么这么多的老鼠，我的仆从们呢，这到底是怎么回事？",
+      "upDesc" : "侯爵：噢！噢！怎么这么多的老鼠，我的仆从们呢，这到底是怎么回事？",
       "downDesc" : "为捕鼠做出贡献，提升影响力"
     },
     {
@@ -12140,7 +12140,7 @@
           ]
         }
       ],
-      "upDesc" : "瓦林提亚：家里应该没有食物才对，这些老鼠从哪里来的？看来得找费琳娜讨点药草了。",
+      "upDesc" : "侍从：家里应该没有食物才对，这些老鼠从哪里来的？看来得找费琳娜讨点药草了。",
       "downDesc" : "为捕鼠做出贡献，提升影响力"
     },
     {
@@ -12801,7 +12801,7 @@
           ]
         }
       ],
-      "upDesc" : "安彼西奥：随意调动戍边的士兵并不明智。\\n\n尼奥塔德：可我们已经没有退路了，殿下。",
+      "upDesc" : "亲王：随意调动戍边的士兵并不明智。\n侯爵：可我们已经没有退路了，殿下。",
       "downDesc" : "他们在讨论兵变的事"
     },
     {
@@ -12895,8 +12895,8 @@
           ]
         }
       ],
-      "upDesc" : "尼奥塔德的作息有些反常，每天晚上他都会失踪一段时间。这值得调查一下。",
-      "downDesc" : "跟踪尼奥塔德"
+      "upDesc" : "侯爵的作息有些反常，每天晚上他都会失踪一段时间。这值得调查一下。",
+      "downDesc" : "跟踪侯爵"
     },
     {
       "eventId" : "12012",
@@ -12989,7 +12989,7 @@
         }
       ],
       "upDesc" : "只要把他们联络的鸽子抓下来，密函就送不到国外。",
-      "downDesc" : "拦截尼奥塔德向外国势力的通信"
+      "downDesc" : "拦截侯爵向外国势力的通信"
     },
     {
       "eventId" : "12013",
@@ -13366,8 +13366,8 @@
           ]
         }
       ],
-      "upDesc" : "科恩：现在，猫咪命令你放弃塞达的债权。\\n\n尼奥塔德：我一定遵守共济会的意志。",
-      "downDesc" : "要求尼奥塔德放弃向塞达追债"
+      "upDesc" : "科恩：现在，猫咪命令你放弃塞达的债权。\n侯爵：我一定遵守共济会的意志。",
+      "downDesc" : "要求侯爵放弃向乞丐追债"
     },
     {
       "eventId" : "12100",
@@ -14028,8 +14028,8 @@
           ]
         }
       ],
-      "upDesc" : "尼奥塔德：我可知道你还藏着值钱的东西！\\n\n塞达：没……没有，我真的全都给你了！",
-      "downDesc" : "塞达理解猫语，他的事件不会降低隐匿度"
+      "upDesc" : "侯爵：我可知道你还藏着值钱的东西！\n乞丐：没……没有，我真的全都给你了！",
+      "downDesc" : "乞丐理解猫语，他的事件不会降低隐匿度"
     },
     {
       "eventId" : "12111",
@@ -14123,7 +14123,7 @@
           ]
         }
       ],
-      "upDesc" : "塞达：与其手指被砍，不如拼一把。那边是主教的房子，里面应该会有些值钱的东西。",
+      "upDesc" : "乞丐：与其手指被砍，不如拼一把。那边是主教的房子，里面应该会有些值钱的东西。",
       "downDesc" : "趁主教不在家中，可以去小赚一笔"
     },
     {
@@ -14217,7 +14217,7 @@
           ]
         }
       ],
-      "upDesc" : "塞达：这些钱难道还不够吗？\\n\n尼奥塔德：本金是还上了，但还有利息呢？",
+      "upDesc" : "乞丐：这些钱难道还不够吗？\n侯爵：本金是还上了，但还有利息呢？",
       "downDesc" : "高利贷是个无底洞"
     },
     {
@@ -14310,8 +14310,8 @@
           ]
         }
       ],
-      "upDesc" : "嘉帕兹：你好像受伤了，需要什么帮助吗？\\n\n塞达：别出声，就行了。有人在追我。",
-      "downDesc" : "塞达理解猫语，他的事件不会降低隐匿度"
+      "upDesc" : "女仆：你好像受伤了，需要什么帮助吗？\n乞丐：别出声，就行了。有人在追我。",
+      "downDesc" : "乞丐理解猫语，他的事件不会降低隐匿度"
     },
     {
       "eventId" : "12114",
@@ -14404,8 +14404,8 @@
           ]
         }
       ],
-      "upDesc" : "塞达：我听得懂你们在说什么，也知道你们这些猫满脑子都是坏心思。你也来吃点吧。",
-      "downDesc" : "陪塞达聊聊"
+      "upDesc" : "乞丐：我听得懂你们在说什么，也知道你们这些猫满脑子都是坏心思。你也来吃点吧。",
+      "downDesc" : "陪乞丐聊聊"
     },
     {
       "eventId" : "12115",
@@ -14498,7 +14498,7 @@
           ]
         }
       ],
-      "upDesc" : "塞达：五年前的我要是看见这些东西，应该会难以下咽吧。你们随便吃吧，也没剩多少了。",
+      "upDesc" : "乞丐：五年前的我要是看见这些东西，应该会难以下咽吧。你们随便吃吧，也没剩多少了。",
       "downDesc" : "款待猫咪，提升影响。可以多吃几次"
     },
     {
@@ -14592,8 +14592,8 @@
           ]
         }
       ],
-      "upDesc" : "塞达：反抗吗，确实之前没有想过。要是你们愿意帮我的话，倒确实可以试试。",
-      "downDesc" : "协助塞达，设置机关，抵挡要债的人"
+      "upDesc" : "乞丐：反抗吗，确实之前没有想过。要是你们愿意帮我的话，倒确实可以试试。",
+      "downDesc" : "协助乞丐，设置机关，抵挡要债的人"
     },
     {
       "eventId" : "12117",
@@ -14685,8 +14685,8 @@
           ]
         }
       ],
-      "upDesc" : "塞达：他们来了吗？我去拉粪水的机关。小猫，你去拖延一下时间，一会儿就好。",
-      "downDesc" : "协助塞达，抵挡向他逃债的人"
+      "upDesc" : "乞丐：他们来了吗？我去拉粪水的机关。小猫，你去拖延一下时间，一会儿就好。",
+      "downDesc" : "协助乞丐，抵挡向他逃债的人"
     },
     {
       "eventId" : "12118",
@@ -14780,8 +14780,8 @@
           ]
         }
       ],
-      "upDesc" : "塞达：债不用还了吗？这倒是值得庆祝的事情。攒的这点钱……干脆再请小猫们吃一顿吧。",
-      "downDesc" : "塞达款待猫咪，影响力提升"
+      "upDesc" : "乞丐：债不用还了吗？这倒是值得庆祝的事情。攒的这点钱……干脆再请小猫们吃一顿吧。",
+      "downDesc" : "乞丐款待猫咪，影响力提升"
     },
     {
       "eventId" : "13000",
